--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "url": "https://github.com/feremabraz"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@use-gesture/react": "^10.3.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "lucide-react": "^0.522.0",
